Fix Salient overflow problem

--- a/wp-content/plugins/onepagebooking-wp/css/salient-overrides.css
+++ b/wp-content/plugins/onepagebooking-wp/css/salient-overrides.css
@@ -104,6 +104,10 @@
  * Parent elements will have their z-index increased above Salient's default 11/12 values, so that the
  * popover itself is not inhibited inside its parent.
  */
-*:has(.popover) {
+.wpb_row>.span_12:has(.popover) {
     z-index: 15;
+}
+
+.vc_row:has(.popover), .vc_row:has(.popover) * {
+    overflow: visible;
 }
